@@ -1,3 +1,9 @@
+2006-07-05  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* include/Makefile.am (pch_output): New.
+	(clean-local): Use it.
+	* include/Makefile.in: Regenerate.
+
 2006-07-04  Paolo Carlini  <pcarlini@suse.de>
 
 	* include/tr1/random (_Adaptor<>::operator()()): Cast 1 to
